--- a/.bookmarks.md
+++ b/.bookmarks.md
@@ -1,20 +1,23 @@
 # Bookmarks
 
 ## Todo
-- [ ] [Lit Review](./draft.md#L36) - The report shows advances but doesn't aggregate them into operational outcome
-- [ ] [Lit Review](./draft.md#L38) - That one purpose of Chinese remote sensing buildup is to detect U.S. deployed forces
-- [ ] [Lit Review](./draft.md#L40) - Integrate with discussion of Chinese expansion
+- [ ] [Lit Review](./draft.md#L40) - The report shows advances but doesn't aggregate them into operational outcome
+- [ ] [Lit Review](./draft.md#L42) - That one purpose of Chinese remote sensing buildup is to detect U.S. deployed forces
+- [ ] [Lit Review](./draft.md#L44) - Integrate with discussion of Chinese expansion
 - [ ] [Lit Review](./draft.md#L83) - Why we include civilian satellites in our counts of Chinese systems
+- [ ] [Add about deterrence and international stability](./draft.md#L12) - Intro
+- [ ] [Methods](./draft.md#L18) - Add a two sentence overview of Shipwatch
 
 ## Parts of the Argument
 - [Abstract](./draft.md#L8:0-239) `How effective would Chinese satellite reconnaissance be in providing offboard cueing to attack U.S. surface ships during a war? How much counter-space intervention would be required by the United States to reduce risk to acceptable levels?`
 - [Abstract](./draft.md#L8:240-398) `These questions are important because they inform us about the plausible course of events in a Sino-U.S. war and are critical in shaping U.S. force structure.`
 - [Abstract](./draft.md#L8:399-543) `Most of the scholarly literature builds on projections made before the massive expansion of China's satellite constellations in the past decade.`
 - [Abstract](./draft.md#L8:544-735) `To answer these questions with more contemporary information and at higher fidelity, we designed a simulation of Chinese earth-observation satellites and tested it under a range of scenarios.`
+- [Offboard cueing](./draft.md#L8:399-485) `Key to this discussion is an assessment of China's ability to provide offboard cueing.`
 
 ## Literature Review
 - [ ] [Counterspace](./draft.md#L58) - Berge and Hiim - first strike advantage depends on tools
 
 ## Key Terms
-<!-- No bookmarks yet -->
+- [Offboard Cueing](./draft.md#L14:58-161) `or the provision of sufficiently detailed information to find and fix targets from non-firing platforms` - Introduction
 
