--- a/.bookmarks.md
+++ b/.bookmarks.md
@@ -1,23 +1,35 @@
 # Bookmarks
 
 ## Todo
-- [ ] [Lit Review](./draft.md#L40) - The report shows advances but doesn't aggregate them into operational outcome
-- [ ] [Lit Review](./draft.md#L42) - That one purpose of Chinese remote sensing buildup is to detect U.S. deployed forces
-- [ ] [Lit Review](./draft.md#L44) - Integrate with discussion of Chinese expansion
+- [ ] [Lit Review](./draft.md#L42) - The report shows advances but doesn't aggregate them into operational outcome
+- [ ] [Lit Review](./draft.md#L44) - That one purpose of Chinese remote sensing buildup is to detect U.S. deployed forces
+- [ ] [Lit Review](./draft.md#L46) - Integrate with discussion of Chinese expansion
 - [ ] [Lit Review](./draft.md#L83) - Why we include civilian satellites in our counts of Chinese systems
-- [ ] [Add about deterrence and international stability](./draft.md#L12) - Intro
-- [ ] [Methods](./draft.md#L18) - Add a two sentence overview of Shipwatch
+- [ ] [Add about deterrence and international stability](./draft.md#L18) - Intro
+- [ ] [Methods](./draft.md#L20) - Add a two sentence overview of Shipwatch
+- [ ] [Adnan](./draft.md#L33:229-232) `[X]` - Number of satellites tracked by Shipwatch
+- [ ] [Adnan](./draft.md#L35:0-115) `We find that most U.S. ships would likely be detected and identified within an hour within the second island chain.` - Add in a paragraph about the general results
+- [ ] [Adnan](./draft.md#L35:134-139) `[75%]` - Summary statistics of results
+- [ ] [Adnan](./draft.md#L149:385-418) `Adnan's calculation of duty cycle` - Cite to your calculations about duty cycle
+- [ ] [Adnan](./draft.md#L159:2428-2519) `**size**, meaning that a ship would have to go **size/our average time to identification** ` - Show calculations about SAR covered areas
+- [ ] [Adnan](./draft.md#L159:2575-2580) `[75%]` - Base probability that a ship that is imaged by a follow-on satellite will be identified
 
 ## Parts of the Argument
-- [Abstract](./draft.md#L8:0-239) `How effective would Chinese satellite reconnaissance be in providing offboard cueing to attack U.S. surface ships during a war? How much counter-space intervention would be required by the United States to reduce risk to acceptable levels?`
+- [Abstract](./draft.md#L8:0-239) `How effective would Chinese satellite reconnaissance be in providing offboard cueing to attack U.S. surface ships during a war? How much could counter-space intervention by the United States reduce risk?`
 - [Abstract](./draft.md#L8:240-398) `These questions are important because they inform us about the plausible course of events in a Sino-U.S. war and are critical in shaping U.S. force structure.`
 - [Abstract](./draft.md#L8:399-543) `Most of the scholarly literature builds on projections made before the massive expansion of China's satellite constellations in the past decade.`
 - [Abstract](./draft.md#L8:544-735) `To answer these questions with more contemporary information and at higher fidelity, we designed a simulation of Chinese earth-observation satellites and tested it under a range of scenarios.`
 - [Offboard cueing](./draft.md#L8:399-485) `Key to this discussion is an assessment of China's ability to provide offboard cueing.`
 
 ## Literature Review
-- [ ] [Counterspace](./draft.md#L58) - Berge and Hiim - first strike advantage depends on tools
+<!-- No bookmarks yet -->
 
 ## Key Terms
-- [Offboard Cueing](./draft.md#L14:58-161) `or the provision of sufficiently detailed information to find and fix targets from non-firing platforms` - Introduction
+- [Counterspace](./draft.md#L79:0-107) `Counterspace, or capabilities that can be used to deceive, disrupt, deny, degrade, or destroy space systems` - In lit review
+- [Offboard cueing](./draft.md#L27:41-161) `the detection and identification of targets by non-firing platforms` - Introduction
+- [Identification](./draft.md#L87:232-334) `determining that the detected ship is an enemy combatant with sufficient confidence to launch an attack` - Modeling
+- [Detection](./draft.md#L87:133-189) `determining that there is a ship of some type in an area` - Modeling
+
+## Notes
+<!-- No bookmarks yet -->
 
